#82 - displayed noted on the overview and calendar pages.

--- a/sources/VeloCity.Wpf.Presentation.Styles/Generic.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Generic.xaml
@@ -22,6 +22,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	<ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/PropertyGroupViewStyles.xaml"/>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/PropertyGroupsViewStyles.xaml"/>
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/InfoBlockStyles.xaml"/>
+        <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/NotesBlockStyles.xaml"/>
 	</ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
