--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/DataGridStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/DataGridStyles.xaml
@@ -41,7 +41,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="RowHeaderWidth" Value="0" />
         <Setter Property="AlternationCount" Value="2" />
         <Setter Property="RowBackground" Value="White" />
-        <Setter Property="AlternatingRowBackground" Value="{StaticResource BackgroundLightBrush}" />
         <Setter Property="HorizontalScrollBarVisibility" Value="Disabled" />
 
         <Setter Property="Template">
@@ -244,7 +243,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Style.Triggers>
 
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#D8F4F8" />
+                <Setter Property="Background" Value="WhiteSmoke" />
             </Trigger>
 
             <DataTrigger Binding="{Binding IsSelected}" Value="True">
