--- a/sources/VeloCity.Wpf.Presentation/Views/SprintOverviewView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Views/SprintOverviewView.xaml
@@ -39,221 +39,21 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <ScrollViewer>
+    <DockPanel>
 
-        <styles:PropertyGroupsView
-            ItemsSource="{Binding PropertyGroups}"/>
+        <styles:NotesBlock
+            DockPanel.Dock="Bottom"
+            ItemsSource="{Binding Notes}"
+            Margin="0 20 0 0"
+            Padding="20"
+            Background="GhostWhite"
+            BorderThickness="2"
+            CornerRadius="4" />
 
+        <ScrollViewer>
+            <styles:PropertyGroupsView ItemsSource="{Binding PropertyGroups}" />
+        </ScrollViewer>
 
-        <!--<StackPanel Orientation="Vertical" Grid.IsSharedSizeScope="True">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="20" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="20" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="20" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Time Interval" />
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Text="{Binding TimeInterval}" />
-
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="State" />
-
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Text="{Binding State}" />
-
-                <TextBlock
-                    Grid.Row="3"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Work Days" />
-
-                <TextBlock
-                    Grid.Row="3"
-                    Grid.Column="1"
-                    Text="{Binding WorkDaysCount}" />
-
-                <TextBlock
-                    Grid.Row="4"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Total Work Hours" />
-
-                <TextBlock
-                    Grid.Row="4"
-                    Grid.Column="1"
-                    Text="{Binding TotalWorkHours}" />
-
-                <TextBlock
-                    Grid.Row="6"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Estimated Story Points" />
-
-                <TextBlock
-                    Grid.Row="6"
-                    Grid.Column="1"
-                    Text="{Binding EstimatedStoryPoints}" />
-
-                <TextBlock
-                    Grid.Row="7"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Estimated Velocity" />
-
-                <TextBlock
-                    Grid.Row="7"
-                    Grid.Column="1"
-                    Text="{Binding EstimatedVelocity}" />
-
-                <TextBlock
-                    Grid.Row="8"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Commitment Story Points" />
-
-                <TextBlock
-                    Grid.Row="8"
-                    Grid.Column="1"
-                    Text="{Binding CommitmentStoryPoints}" />
-
-                <TextBlock
-                    Grid.Row="10"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Actual Story Points" />
-
-                <TextBlock
-                    Grid.Row="10"
-                    Grid.Column="1"
-                    Text="{Binding ActualStoryPoints}" />
-
-                <TextBlock
-                    Grid.Row="11"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Actual Velocity" />
-
-                <TextBlock
-                    Grid.Row="11"
-                    Grid.Column="1"
-                    Text="{Binding ActualVelocity}" />
-            </Grid>
-
-            <TextBlock Text="Before Start"/>
-
-            <Grid>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" SharedSizeGroup="LabelGroup" />
-                    <ColumnDefinition Width="*" SharedSizeGroup="ValueGroup" />
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Estimated Story Points" />
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Text="{Binding EstimatedStoryPoints}" />
-
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Estimated Velocity" />
-
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Text="{Binding EstimatedVelocity}" />
-
-                <TextBlock
-                    Grid.Row="2"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Commitment Story Points" />
-
-                <TextBlock
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    Text="{Binding CommitmentStoryPoints}" />
-            </Grid>
-
-            <TextBlock Text="After Close"/>
-
-            <Grid>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" SharedSizeGroup="LabelGroup" />
-                    <ColumnDefinition Width="*" SharedSizeGroup="ValueGroup" />
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Actual Story Points" />
-
-                <TextBlock
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Text="{Binding ActualStoryPoints}" />
-
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="0"
-                    Margin="0 0 10 0"
-                    Text="Actual Velocity" />
-
-                <TextBlock
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Text="{Binding ActualVelocity}" />
-            </Grid>
-        </StackPanel>-->
-
-    </ScrollViewer>
+    </DockPanel>
 
 </UserControl>
