--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/Constants.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/Constants.xaml
@@ -23,18 +23,26 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <!-- Primary Colors -->
 
-    <Color x:Key="PrimaryColor">#AA6C39</Color>
+    <Color x:Key="PrimaryColor">#2D2D30</Color>
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource PrimaryColor}" />
 
-    <Color x:Key="PrimaryDarkColor">#804515</Color>
+    <Color x:Key="PrimaryDarkColor">#252526</Color>
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDarkColor}" />
 
-    <Color x:Key="PrimaryLightColor">#D49A6A</Color>
+    <Color x:Key="PrimaryLightColor">#3F3F46</Color>
     <SolidColorBrush x:Key="PrimaryLightBrush" Color="{StaticResource PrimaryLightColor}" />
 
     <!-- Special Colors -->
 
-    <Color x:Key="AccentColor">#552700</Color>
+    <!-- Blue -->
+    <!--<Color x:Key="AccentColor">#007ACC</Color>-->
+
+    <!-- Green -->
+    <Color x:Key="AccentColor">#00bc00</Color>
+
+    <!-- Orange -->
+    <!--<Color x:Key="AccentColor">#F0AD4E</Color>-->
+
     <SolidColorBrush x:Key="AccentBrush" Color="{StaticResource AccentColor}" />
 
     <Color x:Key="WarningColor">#F0AD4E</Color>
@@ -48,39 +56,22 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     <!-- Border Constants -->
 
-    <Color x:Key="BorderColor">#DBDBDB</Color>
+    <Color x:Key="BorderColor">#3F3F46</Color>
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderColor}" />
 
-    <Color x:Key="BorderDarkColor">#C7C6C1</Color>
-    <SolidColorBrush x:Key="BorderDarkBrush" Color="{StaticResource BorderDarkColor}" />
-
-    <Color x:Key="SelectedBorderColor">#3E4B52</Color>
-    <SolidColorBrush x:Key="SelectedBorderBrush" Color="{StaticResource SelectedBorderColor}" />
-
-    <!-- Background Constants -->
-
-    <Color x:Key="BackgroundDarkColor">#3E4B52</Color>
-    <SolidColorBrush x:Key="BackgroundDarkBrush" Color="{StaticResource BackgroundDarkColor}" />
-
-    <Color x:Key="BackgroundLightColor">#F7F7F7</Color>
-    <SolidColorBrush x:Key="BackgroundLightBrush" Color="{StaticResource BackgroundLightColor}" />
-
-    <Color x:Key="MouseOverBackgroundColor">#F7F7F7</Color>
-    <SolidColorBrush x:Key="MouseOverBackgroundBrush" Color="{StaticResource MouseOverBackgroundColor}" />
-
-    <Color x:Key="SelectedBackgroundColor">#e7e7e7</Color>
-    <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="{StaticResource SelectedBackgroundColor}" />
+    <Color x:Key="BorderSelectedColor">#3E4B52</Color>
+    <SolidColorBrush x:Key="SelectedBorderBrush" Color="{StaticResource BorderSelectedColor}" />
 
     <!-- Font Constants -->
 
-    <Color x:Key="PrimaryFontDarkColor">#212121</Color>
-    <SolidColorBrush x:Key="PrimaryFontDarkBrush" Color="{StaticResource PrimaryFontDarkColor}" />
+    <Color x:Key="FontPrimaryColor">#F1F1F1</Color>
+    <SolidColorBrush x:Key="FontPrimaryBrush" Color="{StaticResource FontPrimaryColor}" />
 
-    <Color x:Key="PrimaryFontLightColor">#FFFFFF</Color>
-    <SolidColorBrush x:Key="PrimaryFontLightBrush" Color="{StaticResource PrimaryFontLightColor}" />
+    <Color x:Key="FontPrimaryDarkColor">#212121</Color>
+    <SolidColorBrush x:Key="FontPrimaryDarkBrush" Color="{StaticResource FontPrimaryDarkColor}" />
 
-    <Color x:Key="DisabledFontColor">#8F8F8F</Color>
-    <SolidColorBrush x:Key="DisabledFontBrush" Color="{StaticResource DisabledFontColor}" />
+    <Color x:Key="FontDisabledColor">#8F8F8F</Color>
+    <SolidColorBrush x:Key="FontDisabledBrush" Color="{StaticResource FontDisabledColor}" />
 
     <system:Double x:Key="DefaultFontSize">14</system:Double>
 
