--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PropertyGroupViewStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/PropertyGroupViewStyles.xaml
@@ -19,8 +19,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles"
-    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles.Converters">
+    xmlns:styles="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Styles">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
@@ -42,7 +41,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <Setter.Value>
                 <DataTemplate>
 
-                    <Grid>
+                    <Grid Margin="0 0 0 8">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn" />
                             <ColumnDefinition Width="20" />
@@ -60,7 +59,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                         <ContentControl
                             Grid.Column="2"
-                            Content="{Binding Value}" />
+                            Content="{Binding Value}">
+
+                            <ContentControl.Resources>
+                                <Style TargetType="{x:Type TextBlock}" />
+                            </ContentControl.Resources>
+                        </ContentControl>
                     </Grid>
 
                 </DataTemplate>
