--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/DataGridStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/DataGridStyles.xaml
@@ -24,23 +24,19 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Color x:Key="DataGridBorderColor">#dbdbdb</Color>
-    <SolidColorBrush x:Key="DataGridBorderBrush" Color="{StaticResource DataGridBorderColor}" />
-
     <Style TargetType="{x:Type DataGrid}">
         <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
-        <Setter Property="Foreground" Value="{StaticResource PrimaryFontDarkBrush}" />
-        <Setter Property="Background" Value="White" />
+        <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
+        <Setter Property="Background" Value="{StaticResource PrimaryDarkBrush}" />
         <Setter Property="GridLinesVisibility" Value="None" />
-        <Setter Property="VerticalGridLinesBrush" Value="{StaticResource DataGridBorderBrush}" />
-        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource DataGridBorderBrush}" />
-        <Setter Property="BorderThickness" Value="1 1 1 0" />
-        <Setter Property="BorderBrush" Value="{StaticResource DataGridBorderBrush}" />
+        <Setter Property="VerticalGridLinesBrush" Value="{StaticResource BorderBrush}" />
+        <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource BorderBrush}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="RowHeaderWidth" Value="0" />
-        <Setter Property="AlternationCount" Value="2" />
-        <Setter Property="RowBackground" Value="White" />
+        <Setter Property="RowBackground" Value="{StaticResource PrimaryDarkBrush}" />
         <Setter Property="HorizontalScrollBarVisibility" Value="Disabled" />
 
         <Setter Property="Template">
@@ -52,11 +48,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
                         Padding="{TemplateBinding Padding}"
-                        CornerRadius="2">
-
-                        <Border.Background>
-                            <SolidColorBrush Color="{DynamicResource ControlLightColor}" />
-                        </Border.Background>
+                        CornerRadius="2"
+                        Background="{TemplateBinding Background}">
 
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup  x:Name="CommonStates">
@@ -79,11 +72,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <ScrollViewer.Template>
                                 <ControlTemplate TargetType="{x:Type ScrollViewer}">
                                     <Grid >
+
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
+
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto" />
                                             <RowDefinition Height="*" />
@@ -163,9 +158,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </Style>
 
     <Style TargetType="{x:Type DataGridColumnHeader}">
-        <Setter Property="Background" Value="#f1f1f1" />
+        <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
+        <Setter Property="Background" Value="{StaticResource PrimaryLightBrush}" />
         <Setter Property="BorderThickness" Value="0 0 1 1" />
-        <Setter Property="BorderBrush" Value="{StaticResource DataGridBorderBrush}" />
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="FontWeight" Value="DemiBold" />
         <Setter Property="Padding" Value="18 0" />
         <Setter Property="MinHeight" Value="45" />
@@ -271,7 +267,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         Padding="{TemplateBinding Padding}">
 
                         <ContentPresenter VerticalAlignment="Center" />
-
                     </Border>
 
                 </ControlTemplate>
@@ -281,8 +276,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Style.Triggers>
 
             <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
                 <Setter Property="Background" Value="Transparent" />
-                <Setter Property="Foreground" Value="{StaticResource PrimaryFontDarkBrush}" />
             </Trigger>
 
         </Style.Triggers>
