--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/TextBoxStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/TextBoxStyles.xaml
@@ -35,7 +35,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <Setter Property="BorderBrush" Value="#C4C4C4" />
         <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
-        <Setter Property="Foreground" Value="{StaticResource PrimaryFontDarkBrush}" />
+        <Setter Property="Foreground" Value="{StaticResource FontPrimaryDarkBrush}" />
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="AllowDrop" Value="true" />
