--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/WindowStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/StandardControls/WindowStyles.xaml
@@ -17,25 +17,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type Label}">
-        <Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
-        <Setter Property="FontSize" Value="16" />
-        <Setter Property="Foreground" Value="{StaticResource FontPrimaryDarkBrush}" />
-        <Setter Property="Margin" Value="0" />
-        <Setter Property="Padding" Value="0" />
-
-        <Style.Triggers>
-            <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{StaticResource FontDisabledBrush}"/>
-            </Trigger>
-        </Style.Triggers>
+    <Style TargetType="{x:Type Window}" x:Key="WindowStyle">
+        <Setter Property="Background" Value="{StaticResource PrimaryBrush}"/>
     </Style>
 
 </ResourceDictionary>
